# agent-bench-lab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
configs/: hardening_gates.json  task_lifecycle.json
docs/: 01-concept.md  02-architecture.md  03-evaluation-protocol.md  04-anti-overfitting.md  05-task-authoring.md  06-metrics.md  07-public-private-split.md  08-codex-prompt.md  09-run-records.md  10-comparing-setups.md  11-if01-decision-grade.md  12-data01-decision-grade.md  13-doc01-decision-grade.md  14-sup01-decision-grade.md  15-api01-decision-grade.md  16-benchmark-lifecycle.md  17-mutation-and-exploit-gates.md  18-suite-strategy.md  19-report-schema-v1.md  20-research-radar.md  21-local-agent-runner.md  22-run-validity-diagnostics.md  README.md  canonical-scope-and-baseline-boundary.md  canonical-scope-and-consumer-boundary.md  decision-log-template.md  private-eval-layer.md  public-release-checklist.md  reporting-and-feedback.md  roadmap-v0.md  scorer-types.md
fixtures/: README.md
research/: README.md  daily-brief-template.md  idea-candidates-template.md  people.md  reading-queue.md  repos.md  source-map.csv  watchlist.md  weekly-synthesis-template.md
schemas/: run.schema.json  score.schema.json  task.schema.json  trace_event.schema.json
scripts/: check_hardening_gates.py  check_lifecycle.py  create_api01_mutation.py  create_data01_mutation.py  create_doc01_mutation.py  create_if01_mutation.py  create_sample_artifacts.py  create_sample_runs.py  create_sup01_mutation.py  create_task.py  (+3 more)
(+150 files in other folders)
